[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcare-x"
version = "0.1.0"
description = "AI Customer Operations Environment — OpenEnv compliant benchmark"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "requests>=2.31.0",
    "openenv-core>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server", "graders", "env", "tasks"]
py-modules = ["models"]
